--- a/app/assets/stylesheets/project_new.css.scss
+++ b/app/assets/stylesheets/project_new.css.scss
@@ -17,6 +17,12 @@
       margin-bottom: 1rem;
       color: #666;
     }
+
+    .select-industry-link {
+      display: inline-block;
+      margin-top: 0.2rem;
+    }
+
     .autocomplete-wrapper {
       position: absolute;
       list-style-type: none;
@@ -63,6 +69,7 @@
 }
 
 .select-industry-modal {
+
   .head, .categories {
     overflow: auto;
     max-height: 400px;
@@ -80,11 +87,30 @@
       line-height: 2;
     }
   }
+
   .categories {
     .name {
       margin-left: 0.5rem;
     }
-
   }
 }
 
+.select-industries {
+  margin-bottom: 0;
+  .no-content {
+    margin: 0.5rem 0;
+    margin-left: 1.375rem;
+    padding: 0.3rem 0;
+  }
+
+  .content {
+    border: 1px solid #ddd;
+    padding: 0.3rem 0.5rem;
+    margin: 0.5rem 0;
+    .revert {
+      margin-left: 0.3rem;
+      cursor: pointer;
+      color: #444;
+    }
+  }
+}
