--- a/app/views/common/_project_list_item.html.slim
+++ b/app/views/common/_project_list_item.html.slim
@@ -15,4 +15,4 @@
         | #{project.cities_name}
       i.fi-list-thumbnails
       span.category
-        | #{project.categories_name}
+        = raw project_categories_link(project)
