城市的搜索

--- a/app/assets/stylesheets/components/project_list_item.css.scss
+++ b/app/assets/stylesheets/components/project_list_item.css.scss
@@ -32,4 +32,17 @@
 
     }
   }
+
+  .description {
+    color: #666;
+  }
+
+  .city, .category {
+    a {
+      color: #999;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
 }
