--- a/app/views/explore/all.html.slim
+++ b/app/views/explore/all.html.slim
@@ -18,6 +18,13 @@
               - @heads.each do |head|
                 dd class="#{active_for(head.id.to_s, params[:head_id].to_s)}" ng-class="{ active: is_selected_head(#{head.id}) }"
                   a ng-click='select_head(#{head.id})' #{head.name}
+            dl.sub-nav ng-init='city_id ="#{params[:city_id]}"'
+              dt 城市:
+              dd class="#{active_for('', params[:city_id].to_s)}" ng-class="{ active: is_selected_city('') }"
+                a ng-click='select_city("")' 全部
+              - @cities.each do |city|
+                dd class="#{active_for(city.id.to_s, params[:city_id].to_s)}" ng-class="{ active: is_selected_city(#{city.id}) }"
+                  a ng-click='select_city(#{city.id})' #{city.name}
         .row.search.collapse
           .small-9.medium-6.large-4.columns
             input type='text' id='search' placeholder='项目名称' ng-model='q' ng-init='q="#{params[:q]}"'
@@ -30,4 +37,4 @@
         - else
           = render partial: 'common/project_list_item', collection: @projects, as: :project
           .paginate
-            = paginate @projects, params: { q: params[:q] }
+            = paginate @projects, params: { q: params[:q], city_id: params[:city_id], head_id: params[:head_id] }
