--- a/app/assets/javascripts/angularjs/project_create_basic.js.coffee.erb
+++ b/app/assets/javascripts/angularjs/project_create_basic.js.coffee.erb
@@ -102,7 +102,7 @@
 
   $scope.select_industry = ()->
     modal = $modal.open
-      templateUrl: 'select_industry.html'
+      templateUrl: '<%= asset_path("select_industry.html") %>'
       controller: 'SelectIndustryModalController',
       resolve:
         industries: ->
