注册与登录链接

--- a/app/assets/stylesheets/components/header.css.scss
+++ b/app/assets/stylesheets/components/header.css.scss
@@ -3,6 +3,14 @@
     padding-left: 0;
     padding-right: 30px;
   }
+
+  .separation a {
+    padding: 0;
+  }
+
+  .search {
+    border-radius: 10rem;
+  }
 }
 .main-container {
   background-color: #fff;
