--- a/app/views/explore/index.html.slim
+++ b/app/views/explore/index.html.slim
@@ -10,34 +10,13 @@
         - if @recommends.blank?
           p.no-content 暂无编辑推荐
         - else
-          ul.small-block-grid-1.medium-block-grid-2.large-block-grid-3.recommend-projects
+          ul.small-block-grid-1.medium-block-grid-2.large-block-grid-3.start-projects-content
             - @recommends.each do |recommend|
               - project = recommend.project
-              li.recommend-project
-                p
-                  = link_to project
-                    - image_tag project.screenshot_cover_try_image_url
-                p
-                  = link_to project do
-                    span #{project.name}
-                    | - 
-                    span #{project.oneword}
-        h2 分类
-        ul.small-block-grid-1.medium-block-grid-2.large-block-grid-3.square-categories.list
-          - @categories.each do |c|
-            li
-              = link_to c.name, c
-          .small-12.columns.all-categories
-            = link_to '查看所有分类', categories_explore_index_path
+              = render partial: 'common/project_block_item', locals: { project: project }
         h2 最新项目
-        ul.small-block-grid-1.medium-block-grid-2.large-block-grid-3.square-projects
+        ul.small-block-grid-1.medium-block-grid-2.large-block-grid-3.square-projects.start-projects-content
           - @newest_projects.each do |project|
-            li.recommend-project
-              p
-                = link_to project do
-                  - image_tag project.screenshot_cover_try_image_url
-              p
-                = link_to project do
-                  | #{project.fullname}
+            = render partial: 'common/project_block_item', locals: { project: project }
           .small-12.columns.all-projects
             = link_to '查看所有项目', all_explore_index_path
