--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -25,3 +25,4 @@
             li
               = link_to '注册', new_user_registration_path
     = render 'layouts/user_dropdown' if current_user
+hr.topbar-hr
