--- a/app/assets/stylesheets/explore.css.scss
+++ b/app/assets/stylesheets/explore.css.scss
@@ -1,30 +1,74 @@
 .explore {
 
   .explore-head {
-    h1 {
-      margin-bottom: 2rem;
-      border-bottom: 1px solid #ddd;
-      padding-bottom: 1rem;
-    }
 
-    .list {
-      text-align: center;
-      width: 100%;
-      a {
-        width: 100%;
-        color: #333;
-        font-size: 1.2rem;
-        display: inline-block;
-        width: 100%;
-        padding-bottom: 1.875rem;
-      }
-      .active {
-        border-bottom: 2px solid #d26911;
-      }
+    .tabs li a {
     }
-
     margin-bottom: 3rem;
     border-bottom: 1px solid #ddd;
     width: 100%;
+  }
+}
+
+.by-tabs {
+  margin-left: 0;
+  border: 1px solid #ddd;
+
+  .tab-title {
+    list-style: none;
+    margin-left: 0;
+
+    a {
+      display: block;
+      padding: 1rem 2rem;
+      color: #666;
+      border-bottom: 1px solid #eee;
+      &:hover {
+        background-color: #eee;
+      } 
+    }
+
+    &.active a {
+      color: #333;
+      font-weight: 600;
+    }
+  }
+}
+
+.by-tabs-2 {
+  margin-left: 0;
+  border: 1px solid #ddd;
+
+  .tab-title {
+    list-style: none;
+    margin-left: 0;
+    display: inline-block;
+
+    a {
+      display: block;
+      padding: 0.5rem 1rem;
+      color: #666;
+      border-bottom: 1px solid #eee;
+      &:hover {
+        color: #333;
+      } 
+    }
+
+    &.active a {
+      color: #333;
+      font-weight: 600;
+    }
+  }
+}
+
+.trend {
+  td.index {
+    width: 10%;
+  }
+  td.project {
+    width: 80%;
+  }
+  td.commitment {
+    width: 10%;
   }
 }
