重构发现页面

--- a/app/assets/stylesheets/components/project_list_item.css.scss
+++ b/app/assets/stylesheets/components/project_list_item.css.scss
@@ -3,6 +3,9 @@
   border-right: 1px solid #ddd;
   border-left: 1px solid #ddd;
   padding: 1rem 0;
+  img {
+    border-radius: 10rem;
+  }
   .name {
     display: inline;
     margin-right: 1rem;
