--- a/app/views/layouts/_messagebox.html.slim
+++ b/app/views/layouts/_messagebox.html.slim
@@ -1,1 +1,3 @@
-= link_to '0', messages_path, class: 'messagebox',  'ng-controller' => 'MessageController', 'ng-class' => '{ unread: !is_empty() }', 'ng-bind' => 'message_count()'
+= link_to messages_path, class: 'messagebox',  'ng-controller' => 'MessageController', 'ng-class' => '{ unread: !is_empty() }' do
+  i.fa.fa-bell
+  span ng-bind='message_count()' 0
