--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,6 @@
 /*
  *= require_self
+ *= require font-awesome
  *= require foundation_and_overrides
  *= require jquery-ui-1.10.4.custom
  *= require jquery.pnotify.default
