调整首页手机版的效果

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -54,7 +54,8 @@
 .start-projects-content, .start-investors-content, .start-jobs-content{
   h2 {
     text-align: center;
-    margin: 2rem;
+    margin: 1.5rem 0 1rem 0;
+    font-size: 1.2rem;
   }
 
   .project img, .job img {
@@ -63,6 +64,9 @@
 
   .head {
     min-height: 6.5rem;
+    h5 {
+      font-size: 1.025rem;
+    }
   }
 
   .investor .content {
@@ -102,9 +106,15 @@
       font-size: 95%;
       line-height: 2;
       height: 5rem;
+
       .type {
+        width: 100%;
         color: #999;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
+
       .item {
         color: #666;
         white-space: nowrap;
